[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/main_menu/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/title.png" type="Texture" id=3]
[ext_resource path="res://ui/AudioButton.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
settings_scene = "res://ui/main_menu/SettingsMenu.tscn"
credits_scene = "res://ui/main_menu/CreditsMenu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.0313726, 0.164706, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 910.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 12
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2"]
margin_right = 620.0
margin_bottom = 520.0
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_left = 190.0
margin_top = 532.0
margin_right = 430.0
margin_bottom = 860.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 4
size_flags_vertical = 5
custom_constants/separation = 12
alignment = 1

[node name="StartButton" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_bottom = 73.0
text = "START"

[node name="ContinueButton" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
visible = false
margin_top = 85.0
margin_bottom = 158.0
text = "CONTINUE"

[node name="SettingsButton" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 85.0
margin_bottom = 158.0
text = "SETTINGS"

[node name="CreditsButton" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 170.0
margin_bottom = 243.0
text = "CREDITS"

[node name="QuitButton" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 255.0
margin_bottom = 328.0
text = "QUIT"

[connection signal="tree_entered" from="." to="." method="_on_TitleScreen_tree_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
